# Audiobooker

./: .gitignore  README.md  pyproject.toml
.github/: FUNDING.yml
audiobooker/: __init__.py  api.py  assemble.py  config.py  effects.py  gen.py  mix_sfx.py  parser.py  retry.py  sfx_gen.py  text.py  tts.py  tts_cli.py
docs/: cast-yaml.md  cli.md  engines.md  llm-backends.md  sfx.md
examples/: cast-hud.example.yaml  cast.example.yaml  chapter-hud-sfx-config.example.json  chapter-hud.example.txt  chapter.example.txt  sfx-config.example.json
examples/output/: README.md  corridor-hybrid-ch2.m4b  corridor-hybrid-sfx-ch2.m4b  corridor-kokoro-ch2.m4b  parkbench-hybrid-ch1.m4b  parkbench-kokoro-ch1.m4b
tests/: test_config.py  test_effects.py  test_gen.py  test_parser.py  test_retry.py  test_text.py
